WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114272
[BlackBerry][CSS Filters] Blur filter fails to recompute blur size when layer size changes
https://bugs.webkit.org/show_bug.cgi?id=114272
Summary
[BlackBerry][CSS Filters] Blur filter fails to recompute blur size when layer...
Arvid Nilsson
Reported
2013-04-09 06:00:52 PDT
This seems to happen frequently with CSS filters applied to images - the initial image size is small, and when the image is fully decoded the surface size increases to the true image size. If a surface starts out at 12x12, the blur distance will be computed as 1/12 and that will still be used when the surface increases to the right size. Can be seen by manual inspection ofLayoutTests/css3/filters/effect-blur-hw.html PR 323730
Attachments
Patch
(7.00 KB, patch)
2013-04-11 03:29 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2013-04-11 02:54:46 PDT
"blur size" is the term used in the actual shader
Arvid Nilsson
Comment 2
2013-04-11 03:29:01 PDT
Created
attachment 197567
[details]
Patch
Rob Buis
Comment 3
2013-04-11 07:00:36 PDT
Comment on
attachment 197567
[details]
Patch Nice fix.
WebKit Commit Bot
Comment 4
2013-04-11 07:34:57 PDT
Comment on
attachment 197567
[details]
Patch Clearing flags on attachment: 197567 Committed
r148201
: <
http://trac.webkit.org/changeset/148201
>
WebKit Commit Bot
Comment 5
2013-04-11 07:35:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug